[package]
name = "print_bytes"
version = "0.7.1"
authors = ["dylni"]
edition = "2021"
rust-version = "1.57.0"
description = """
Print bytes as losslessly as possible
"""
readme = "README.md"
repository = "https://github.com/dylni/print_bytes"
license = "MIT OR Apache-2.0"
keywords = ["bytes", "osstr", "path", "print", "windows"]
categories = ["command-line-interface", "os", "wasm"]
exclude = [".*", "tests.rs", "/rustfmt.toml", "/src/bin", "/tests"]

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "print_bytes_docs_rs"]
rustdoc-args = ["--cfg", "print_bytes_docs_rs"]

[dependencies]
print_bytes2 = { package = "print_bytes", version = "1.0" }

[dev-dependencies]
os_str_bytes = "6.3"

[features]
specialization = ["print_bytes2/specialization"]
