[package]
name = "print_bytes"
version = "2.0.2"
authors = ["dylni"]
edition = "2021"
rust-version = "1.74.0"
description = """
Print bytes as losslessly as possible
"""
readme = "README.md"
repository = "https://github.com/dylni/print_bytes"
license = "MIT OR Apache-2.0"
keywords = ["bytes", "osstr", "path", "print", "windows"]
categories = ["command-line-interface", "os"]
exclude = [".*", "tests.rs", "/rustfmt.toml", "/src/bin", "/tests"]

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "print_bytes_docs_rs"]
rustdoc-args = ["--cfg", "print_bytes_docs_rs"]

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_System_Console"] }

[target.'cfg(not(windows))'.dependencies]
os_str_bytes = { version = "7.0", default-features = false, optional = true }

[features]
specialization = []
